// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreview /> renders correctly closed 1`] = `
<SideModal
  close={[MockFunction]}
  opened={false}
>
  <Suspense
    fallback={<FullPageSpinner />}
  />
</SideModal>
`;

exports[`<PostPreview /> renders idea content 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <Suspense
    fallback={<FullPageSpinner />}
  >
    <LazyIdeaContent
      closePreview={[MockFunction]}
      handleClickEdit={[MockFunction]}
      ideaId="GreatIdea"
    />
  </Suspense>
</SideModal>
`;

exports[`<PostPreview /> renders idea edit 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <Suspense
    fallback={<FullPageSpinner />}
  >
    <LazyIdeaEdit
      goBack={[MockFunction]}
      ideaId="GreatIdea"
    />
  </Suspense>
</SideModal>
`;
